[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ed"
version = "0.1.0"
description = "Real-time economic dispatch (RTED/SCED) engine — AGC base-point calculation"
requires-python = ">=3.12"
dependencies = [
    "highspy",
    "pydantic>=2",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
include = ["ed*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "highspy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
